--- a/lugares-preferidos-em-recife.html
+++ b/lugares-preferidos-em-recife.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recife</title>
-    <link rel="stylesheet" href="estilizacao.css">
+    <link rel="stylesheet" href="lugares_estitilizacao.css">
 
 </head>
 <body>
-    <header>
+    <header class="title">
         <h1>Meus Lugares Preferidos em Recife</h1>
     </header>
     <main>
-        <h2>Shopping RioMar</h2>
+        <h2 class="title">Shopping RioMar</h2>
         <center><img class="foto"  src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1e/02/c3/e6/riomar-recife.jpg?w=1200&h=-1&s=1"></center>
-        <p>
+        <p class="pf">
             O RioMar Recife é um renomado shopping center na capital pernambucana. Com uma localização privilegiada, ele oferece uma ampla
              variedade de lojas, restaurantes e entretenimento para toda a família. Com suas opções de compras de alta qualidade e uma 
              atmosfera vibrante, o RioMar Recife é o lugar ideal para passar um dia agradável e fazer compras. Com uma bela vista para o 
              rio Capibaribe, este shopping é uma atração imperdível para os moradores e visitantes da cidade.
         </p>
-        <br>
-        <h2>Marco Zero</h2>
+  
+        <h2 class="title">Marco Zero</h2>
         <center><img class="foto"  src="https://a.cdn-hotels.com/gdcs/production165/d295/de825d07-0f3f-41e6-b41b-031791c6d729.jpg"></center>
-        <p> 
+        <p class="pf"> 
             O Marco Zero do Recife é um local icônico no coração da cidade. Situado às margens do rio Capibaribe, esse marco histórico é conhecido 
             por sua importância cultural e turística. Lá, os visitantes podem apreciar a vista para o rio, explorar o centro histórico e desfrutar de 
            eventos culturais. É um lugar emblemático que simboliza a rica história e a vitalidade da capital pernambucana.
         </p>
-        <br>
-        <h2>Thorpe´s Brigaderia</h2>
+
+        <h2 class="title">Thorpe´s Brigaderia</h2>
         <center><img class="foto"  src="https://media-cdn.tripadvisor.com/media/photo-s/12/97/0a/98/unidade-cdu.jpg"></center>
-        <p>
+        <p class="pf">
             A Thorpes Brigaderia na CDU, em Recife, é um destino delicioso para os amantes de brigadeiros e doces gourmet. 
             Com uma variedade incrível de sabores e opções, eles oferecem uma experiência gastronômica única. Localizada na região da CDU, 
             a Thorpes Brigaderia é uma parada imperdível para quem deseja saborear essas delícias em um ambiente acolhedor e encantador.
